<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal"    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView

            android:src="@drawable/ic_face"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/fragment_et_logo"
            android:paddingRight="@dimen/margin_large"
            android:paddingLeft="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_edit_profile"
            android:gravity="center_vertical" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fullname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_et_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_salary"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_et_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_position"
         />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/label_spinner_dep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_normal"
        android:textSize="@dimen/text_size_large"/>
    <Spinner
        android:id="@+id/fragment_et_spinner_dep"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save"
        android:id="@+id/fragment_et_btn_save"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
</ScrollView>
